tests/parser/primary-expression-error.stderr
error: expected expression
 --> $DIR/primary-expression-error.lox:1:1
  |
1 | /
  | ^
